# my_dot_files

./:  (Cópia em conflito de DESKTOP-STI 2015-08-31).bash_history   (Cópia em conflito de DESKTOP-STI 2016-01-22).bash_history   (Cópia em conflito de desktop-sti 2015-07-15).bash_history   (Cópia em conflito de desktop-sti 2015-08-02).bash_history  .Xclients  .Xresources  .Xresources.bak  .Xresources__CYGWIN__  .Xresources__VBOX__  .bash_aliases  .bash_colors  .bash_env  .bash_env~  .bash_history (Dropbox (joaomanoel7@gmail.com)'s conflicted copy on 2017-01-10T03-59-36)  .bash_history.bak  .bash_profile  .bashrc  .bashrc.archbang  .bashrc.blackarch  .bashrc.cygwin  .bashrc.cygwin.no_color  .bashrc.no_color  .bashrc_no_color  .bashrc_no_prompt_color  .config_compton.conf  .config_gtk-3.0_settings.ini__ADWAITA__  .config_gtk-3.0_settings.ini__OXYGEN__  .conkyrc  .dmrc  .emacs  .emacs__LINUX__  .emacs__WINDOWS__  .face  .gitconfig  .gitignore  .gitmodules  .gtk-bookmarks  .gtk-bookmarks.en-US  .gtk-bookmarks.pt-BR  .gtkrc-2.0.flat-plat-dark-compact  (+70 more)
.config_autostart/: autostart-mate.desktop  autostart-razorqt.desktop  autostart-xfce.desktop  clipit-startup.desktop  dropbox.desktop  guake.desktop  hplip-systray.desktop  killall.desktop  start-compiz.desktop  teamviewer-teamviewer10.desktop  warsaw.desktop
.config_geany/: geany.conf  keybindings.conf
.config_gtk-2.0/: gtkfilechooser.ini  gtkfilechooser.ini~
.config_gtk-3.0/: bookmarks  bookmarks.en-US  bookmarks.pt-BR  gtk.css  settings.ini  (+26 more)
.icons/blueprint-cursor-theme-0.0.2/cursors/: Makefile  Makefile.am  Makefile.in
(+625 files in other folders)
