cursordir=	$(prefix)/X11R6/lib/X11/icons/$(PACKAGE)/cursors

cursor_DATA=    arrow \
		bottom_left_corner \
		bottom_right_corner \
		bottom_side \
		center_ptr \
		circle \
		cross \
		crosshair \
		dot \
		dotbox \
		double_arrow \
		draft_large \
		draft_small \
		exchange \
		fleur \
		gobbler \
		gumby \
		hand1 \
		hand2 \
		heart \
		left_ptr \
		left_ptr_watch \
		left_side \
		pencil \
		pirate \
		plus \
		question_arrow \
		right_ptr \
		right_side \
		sb_down_arrow \
		sb_h_double_arrow \
		sb_left_arrow \
		sb_right_arrow \
		sb_up_arrow \
		sb_v_double_arrow \
		sizing \
		spider \
		spraycan \
		star \
		tcross \
		top_left_arrow \
		top_left_corner \
		top_right_corner \
		top_side \
		trek \
		umbrella \
		watch \
		X_cursor \
		xterm

EXTRA_DIST=	$(cursor_DATA)

